# eq10q

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  TODO.txt  bassup.c  bassup.ttl  compressor.ttl  compressor_sc.ttl  compressor_stereo.ttl  compressor_stereo_sc.ttl  dynamics.c  eq.c  eq.h  eq10qm.ttl  eq10qs.ttl  eq1qm.ttl  eq1qs.ttl  eq4qm.ttl  eq4qs.ttl  eq6qm.ttl  eq6qs.ttl  eqwindow.cpp  eqwindow.h  eqwindow.hh  gate.c  gate.ttl  gate_stereo.ttl  getttldata.h  lr2ms.ttl  manifest.ttl  midside_matrix.c  ms2lr.ttl  plugins_uris.h  testGui.cpp  trunk.kdev4  uris.h
aux_tools/: ReleaseChecklist.ods  coef_tester.c  dbLut_Tester.cpp  dbLut_generator.cpp  fastMath_Tester.cpp
dsp/: CMakeLists.txt  db.c  db.h  dblut.h  fastmath.h  filter.c  filter.h  midside.h  param_interpolator.h  smooth.c  smooth.h  vu.c  vu.h
gui/: .directory  CMakeLists.txt  README  band_ctl.cpp  band_ctl.h  bandctl.cpp  bandctl.h  bassup_ui.cpp  colors.h  ctlbutton.cpp  ctlbutton.h  dyn_ui.cpp  eq10q_ui.cpp  eq_defines.h  eqbutton.cpp  eqbutton.h  eqconfig.h.in  eqparams.cpp  eqparams.h  faderwidget.cpp  faderwidget.h  gainctl.cpp  gainctl.h  gate_ui.cpp  gui.kdev4  guiconstants.h  guitester.cpp  guitester.h  lv2_ui.h  main.cpp  midside_ui.cpp  pixmapcombo.cpp  pixmapcombo.h  plugin.cpp  vuwidget.cpp  vuwidget.h  vuwidget.hpp
gui/icons/: logodynamics.xcf
gui/knobs/: mixer_knob.xcf
gui/widgets/: CMakeLists.txt  PathConfig.h  PathConfig.h.in  abbutton.cpp  abbutton.h  bandctl.cpp  bandctl.h  bassupwindow.cpp  bassupwindow.h  bodecalc.cpp  bodeplot.cpp  bodeplot.h  button.cpp  button.h  colors.h  ctlbutton.cpp  ctlbutton.h  dynamicswindow.cpp  dynamicswindow.h  dynplot.cpp  dynplot.h  eqbutton.cpp  eqbutton.h  eqparams.cpp  eqparams.h  eqwindow.cpp  eqwindow.h  faderwidget.cpp  faderwidget.h  fftctlwidget.cpp  fftctlwidget.h  filter.cpp  filter.h  gainctl.cpp  gainctl.h  gatewindow.cpp  gatewindow.h  guiconstants.h  knob.cpp  knob.h  (+18 more)
